--- a/resources/admin/css/style.css
+++ b/resources/admin/css/style.css
@@ -9581,3 +9581,15 @@ input[type=checkbox]:not(:disabled).tabbed:focus ~ .lever:after, input[type=chec
 .switch label input[type=checkbox]:checked + .lever.switch-col-white:after {
     background-color: #ffffff
 }
+.center-div {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.hide-item {
+    display: none;
+}
+.size-item {
+    padding-left: 12%;
+    margin-top: 1%;
+}
